init stok model
