# schema/stok_masuk_schema.go
@@ -1,0 +1,14 @@
+package schema
+
+type CreateStockInRequest struct {
+	Items []StockInItem `json:"items"`
+}
+
+type StockInItem struct {
+	ProductID int     `json:"product_id"`
+	Qty       float64 `json:"qty"`
+}
+
+type UpdateStockInStatusRequest struct {
+	Status string `json:"status"`
+}
